<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    android:backgroundTint="@color/white"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/mentorFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="7.5dp"
                android:background="@drawable/edt_style_1"
                android:hint="@string/ismi"
                android:padding="15dp"
                android:textColor="#1A4E79"
                android:textColorHint="#B1ACAC"
                android:textSize="@dimen/_18ssp" />

            <EditText
                android:id="@+id/mentorLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="7.5dp"
                android:background="@drawable/edt_style_1"
                android:hint="@string/familiyasi"
                android:padding="15dp"
                android:textColor="#1A4E79"
                android:textColorHint="#B1ACAC"
                android:textSize="@dimen/_18ssp" />

            <EditText
                android:id="@+id/mentorPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edt_style_1"
                android:hint="@string/telefon_raqami"
                android:padding="15dp"
                android:textColor="#1A4E79"
                android:textColorHint="#B1ACAC"
                android:textSize="@dimen/_18ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingBottom="5dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="0dp"
                    android:textColor="#1A4E79"
                    android:text="@string/yopish"
                    android:textSize="@dimen/_15ssp"
                    android:backgroundTint="@android:color/transparent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="0dp"
                    android:textColor="#FFB800"
                    android:text="@string/o_zgartirish"
                    android:textSize="@dimen/_15ssp"
                    android:backgroundTint="@android:color/transparent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>