<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.mentorlar.AddMentorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFB800"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/yangi_mentor_qo_shish"
                android:textColor="#1A4E79"
                android:textSize="@dimen/_18ssp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edt_style_1"
            android:hint="@string/ismi"
            android:padding="10dp"
            android:textColor="#1A4E79"
            android:textColorHint="#B1ACAC"
            android:textSize="@dimen/_20ssp" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edt_style_1"
            android:hint="@string/familiyasi"
            android:padding="10dp"
            android:textColor="#1A4E79"
            android:textColorHint="#B1ACAC"
            android:textSize="@dimen/_20ssp" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edt_style_1"
            android:hint="@string/telefon_raqami"
            android:padding="10dp"
            android:textColor="#1A4E79"
            android:textColorHint="#B1ACAC"
            android:textSize="@dimen/_20ssp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnAdd"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="15dp"
        android:backgroundTint="#0A252F"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/qo_shish"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>