<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".fragments.guruhlar.AddEditFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFB800"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/talaba_qo_shish"
            android:textColor="#1A4E79"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edt_style_1"
        android:hint="@string/ismi"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#1A4E79"
        android:textColorHint="#B1ACAC"
        android:textSize="@dimen/_20ssp"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edt_style_1"
        android:hint="@string/familiyasi"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#1A4E79"
        android:textColorHint="#B1ACAC"
        android:textSize="@dimen/_20ssp"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edt_style_1"
        android:hint="@string/telefon_raqami"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#1A4E79"
        android:textColorHint="#B1ACAC"
        android:textSize="@dimen/_20ssp"
        android:inputType="phone"
        tools:ignore="Autofill" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edt_style_1">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="1dp"
            android:background="#E2DFDF"
            android:gravity="center_vertical"
            android:hint="@string/_12_12_2024"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:textColor="#1A4E79"
            android:textColorHint="#B1ACAC"
            android:textSize="@dimen/_20ssp" />

        <ImageView
            android:id="@+id/btnDate"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_date"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            tools:ignore="ContentDescription" />
    </FrameLayout>
</LinearLayout>

<androidx.cardview.widget.CardView
    android:id="@+id/btnSaveOrEdit"
    android:layout_width="135dp"
    android:layout_height="40dp"
    android:layout_gravity="end|bottom"
    android:layout_margin="15dp"
    android:backgroundTint="#FFB800"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp">

    <TextView
        android:id="@+id/btnSaveText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/saqlash"
        android:textColor="#1A4E79"
        android:textSize="17sp" />
</androidx.cardview.widget.CardView>
</LinearLayout>
