<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image1"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/codial_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/codial_uz"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_above="@id/card2"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_toStartOf="@id/card2"
        android:backgroundTint="#1A4E79"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/icon_1"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/kurslar"
                android:textColor="#FFB800"
                android:textSize="@dimen/_17ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerInParent="true"
        android:backgroundTint="#1A4E79"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/icon_2"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/guruhlar"
                android:textColor="#FFB800"
                android:textSize="@dimen/_17ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_below="@id/card2"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_toEndOf="@id/card2"
        android:backgroundTint="#1A4E79"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/icon_3"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/mentorlar"
                android:textColor="#FFB800"
                android:textSize="@dimen/_17ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>